--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.0",
     "tether": "^1.4.0"
   },
   "devDependencies": {
